# enterprise-ai-kb

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260614_0001_baseline_and_tasks.py  20260614_0002_security_operations.py  20260615_0003_soft_delete_recycle_bin.py
backend/app/: celery_app.py  celery_tasks.py  dependencies.py  main.py  models.py  schemas.py  worker.py
backend/app/core/: config.py  database.py  migrations.py  security.py
backend/app/routers/: audit.py  auth.py  chat.py  documents.py  knowledge_bases.py  recycle_bin.py
backend/app/services/: audit.py  documents.py  rag.py  rate_limits.py  recycle_bin.py  tasks.py
backend/evaluation/: README.md  evaluate.py
backend/evaluation/datasets/: huawei_business_multi_document_2026_06_14.json  huawei_public_2026_06_13.json
backend/evaluation/reports/: rag-eval-20260613-231623.json  rag-eval-20260613-231623.md  rag-eval-20260613-232129.json  rag-eval-20260613-232129.md  rag-eval-20260613-232544.json  rag-eval-20260613-232544.md  rag-eval-20260613-234553.json  rag-eval-20260613-234553.md  rag-eval-20260613-235150.json  rag-eval-20260613-235150.md
backend/tests/: conftest.py  test_chat_history.py  test_chat_stream.py  test_document_quality.py  test_evaluation_metrics.py  test_features.py  test_flow.py  test_health.py  test_processing_tasks.py  test_rag_graph.py  test_rag_quality.py  test_rag_refusal.py  test_recycle_bin.py  test_security_operations.py
docs/: OPERATIONS.md  (+2 more)
(+13 files in other folders)
