[project]
name = "enterprise-ai-kb-backend"
version = "0.1.0"
description = "Single-developer MVP for an enterprise AI knowledge base"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "python-jose[cryptography]>=3.3,<4",
  "pwdlib[argon2]>=0.3,<1",
  "pymupdf>=1.25,<2",
  "python-docx>=1.1,<2",
  "httpx>=0.28,<1",
  "email-validator>=2.2,<3",
  "fastembed>=0.7,<1",
  "pgvector>=0.4,<1",
  "psycopg[binary]>=3.2,<4",
  "langgraph>=1.0,<2",
  "celery[redis]>=5.5,<6",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.11,<1"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
